After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777426 - (Month view) multi fullday events not rendered right in RTL locale
(Month view) multi fullday events not rendered right in RTL locale
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: Views
unspecified
Other Linux
: Normal critical
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-18 07:00 UTC by Mohammed Sadiq
Modified: 2017-08-19 02:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
calendar in arabic (image) (31.85 KB, image/png)
2017-01-18 07:00 UTC, Mohammed Sadiq
  Details
improve event's dates calculation for RTL languages. (2.66 KB, patch)
2017-07-17 02:03 UTC, Abdullahi Usman
none Details | Review
improve event's dates calculation for RTL languages. (2.66 KB, patch)
2017-07-17 02:11 UTC, Abdullahi Usman
none Details | Review
improve event's dates calculation for RTL languages. (1.91 KB, patch)
2017-07-17 13:35 UTC, Abdullahi Usman
committed Details | Review

Description Mohammed Sadiq 2017-01-18 07:00:00 UTC
Created attachment 343696 [details]
calendar in arabic (image)

Multi-full-day events created are not rendered the right way in month view in RTL locale

How to reproduce:
1. Open calendar with some RTL locale
   LANG=ar_SA jhbuild run gnome-calendar
2. create a 2 day event using mouse click and drag

Please see the attached screenshot for the resulting event.

Thanks.
Comment 1 Abdullahi Usman 2017-07-17 02:03:23 UTC
Created attachment 355724 [details] [review]
improve event's dates calculation for RTL languages.
Comment 2 Abdullahi Usman 2017-07-17 02:11:43 UTC
Created attachment 355725 [details] [review]
improve event's dates calculation for RTL languages.
Comment 3 Abdullahi Usman 2017-07-17 13:35:31 UTC
Created attachment 355749 [details] [review]
improve event's dates calculation for RTL languages.
Comment 4 Georges Basile Stavracas Neto 2017-08-19 02:53:21 UTC
Review of attachment 355749 [details] [review]:

Nice catch, and great commit message!